# backup_tool

./: CMakeLists.txt  README.md  backup.cpp  compress.cpp  compress.h  encrypt.h  file_info.cpp  file_info.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  restore.cpp  utils.h  小组软件测试报告.docx  软件需求分析.docx
